// protoc --proto_path=/home/at15/workspace/src/:. --gogo_out=plugins=grpc:. rpc.proto
syntax = "proto3";

package benchubcentralrpc;

option go_package = "grpc";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/benchhub/benchhub/pkg/bhpb/types.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;


service BenchHubCentral {
    rpc Ping (bh.Ping) returns (bh.Pong) {
    }
    rpc NodeInfo (bh.NodeInfoReq) returns (bh.NodeInfoRes) {
    }

    rpc RegisterAgent (bh.RegisterAgentReq) returns (bh.RegisterAgentRes) {
    }
    rpc AgentHeartbeat (bh.AgentHeartbeatReq) returns (bh.AgentHeartbeatRes) {
    }
    rpc ListAgent (bh.ListAgentReq) returns (bh.ListAgentRes) {
    }
    rpc SubmitJob (bh.SubmitJobReq) returns (bh.SubmitJobRes) {
    }
}